util/ast-gemerator/grammar.grammar
program        → declaration* EOF ;

declaration    → varDecl
               | statement ;

varDecl        → "var" IDENTIFIER ( "=" expression )? ";" ;

statement      → exprStmt
               | printStmt ;

exprStmt       → expression ";" ;
printStmt      → "print" expression ("," expression)* ";" ;

// TODO: ta tudo defasado aqui, a logica em parser.rs esta com mais classes que constam aqui
expression     → shell_expr ;
shell_expr     → "sh" "(" equality ")" ; // TODO: arrumar esta gambiarra mais tarde. utilizar a mesma sintaxe que utilizei no print
equality       → comparison ( ( "!=" | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary
               | primary ;
primary        → NUMBER | STRING | "true" | "false" | "nil"
               | "(" expression ")" 
               | IDENTIFIER ;
